cmake_minimum_required(VERSION 3.17)
project(AP4A_project1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AP4A_project1 APA4.h cours_mercredi.cpp Humidity.cpp Humidity.h data_humidity.txt data_light.txt data_sound.txt data_temperature.txt Light.h Light.cpp main.cpp Scheduler.h Sensor.cpp Sensor.h Serveur.cpp Scheduler.cpp Scheduler.cpp Sound.cpp Temperature.cpp )